[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for LLM code review agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jans2708"},
]
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
code-review-env = "inference:run_inference"
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "env", "tasks", "graders"]
packages = ["server"]
